Fix datepicker behind modal

--- a/grails-app/assets/stylesheets/app/layout.less
+++ b/grails-app/assets/stylesheets/app/layout.less
@@ -898,3 +898,7 @@ body {
     .responsive-invisibility();
   }
 }
+
+.uib-datepicker-popup {
+  z-index: 9999; // Ensure that it's in front in modals
+}
